# mapi-examples

./: .gitignore  README.md
plugins/: README.md
plugins/java-auth-plugin/: README.md  build.gradle  settings.gradle
plugins/java-auth-plugin/src/main/java/com/forallsecure/mayhem4api/: MapiPluginServer.java
plugins/java-auth-plugin/src/main/proto/: request-rewrite-plugin.proto
plugins/java-rewrite-plugin/: README.md
plugins/java-rewrite-plugin/src/main/java/com/forallsecure/mayhem4api/: MapiPluginServer.java
plugins/python-auth-plugin/: Dockerfile  README.md  request-rewrite-plugin.proto  requirements.txt  run-plugin.sh
plugins/python-auth-plugin/src/: plugin.py
plugins/python-classify-plugin/: Dockerfile  requirements.txt  response-classify-plugin.proto  run-plugin.sh
plugins/python-classify-plugin/src/: plugin.py
plugins/python-rewrite-plugin/: OUT.TXT  README.md  request-rewrite-plugin.proto  requirements.txt
plugins/python-rewrite-plugin/src/: plugin.py
plugins/rust-openid-token-plugin/: Cargo.toml  README.md  build.rs  sequence_diagram.puml
plugins/rust-openid-token-plugin/src/: main.rs
plugins/typescript-rewrite-plugin/: README.md  package-lock.json  package.json  request-rewrite-plugin.proto  run-plugin.sh  stop-plugin.sh
plugins/typescript-rewrite-plugin/src/: plugin.ts
