[package]
name = "rust-openid-token-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8.2"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0.27", features = ["derive", "env"] }
portpicker = "0.1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.3"
form_urlencoded = "1.1"
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0"
async-mutex =  "1.4"

[build-dependencies]
tonic-build = "0.8"